--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
               environment:
                 PERCY_PARALLEL_TOTAL: -1
             - image: cypress/base:10
+        parallelism: 4
         steps:
             - checkout
             - run:
@@ -39,7 +40,8 @@ jobs:
                 name: Run tests
                 command: |
                     . venv/bin/activate
-                    npm run test.server
+                    TESTFILES=$(circleci tests glob "tests/selenium/**/test_*.py" | circleci tests split --split-by=timings)
+                    pytest --headless --nopercyfinalize --junitxml=test-reports/junit_intg.xml ${TESTFILES}
             - store_artifacts:
                 path: test-reports
             - store_test_results:
