--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
             - image: circleci/python:3.9.2-buster-node-browsers
               environment:
                 PERCY_PARALLEL_TOTAL: -1
+        parallelism: 2
         steps:
             - checkout
             - run:
@@ -38,7 +39,12 @@ jobs:
                 name: Run tests
                 command: |
                     . venv/bin/activate
-                    npm run test.server
+                    TESTFILES=$(circleci tests glob "tests/selenium/**/test_*.py" | circleci tests split --split-by=timings)
+                    pytest --headless --nopercyfinalize --junitxml=test-reports/junit_intg.xml ${TESTFILES}
+            - store_artifacts:
+                path: test-reports
+            - store_test_results:
+                path: test-reports
             - run:
                 name: 🦔 percy finalize
                 command: npx percy finalize --all
