--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "private::lint.prettier": "prettier --config .prettierrc \"src/**/*.{js,ts,tsx}\" --list-different",
     "private::test.python": "python -m unittest tests/unit/format_test.py",
     "private::test.unit": "karma start karma.conf.js --single-run",
-    "build.watch": "webpack-dev-server --disable-host-check --content-base dash_table --mode development --config webpack.dev.config.js",
+    "build.watch": "webpack serve --disable-host-check --content-base dash_table --mode development --config webpack.dev.config.js",
     "build": "run-s private::build:js private::build:backends",
     "postbuild": "es-check es5 dash_table/*.js",
     "format": "run-s private::format.*",
@@ -66,12 +66,12 @@
     "@types/mocha": "^8.2.1",
     "@types/papaparse": "^5.2.5",
     "@types/ramda": "^0.26.21",
-    "@types/react": "^16.9.46",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
     "@types/react-select": "^3.0.16",
     "babel-loader": "^8.2.2",
     "chai": "^4.3.4",
-    "css-loader": "^3.6.0",
+    "css-loader": "^5.1.3",
     "css.escape": "^1.5.1",
     "d3-format": "^2.0.0",
     "es-check": "^5.2.3",
@@ -100,15 +100,14 @@
     "regenerator-runtime": "^0.13.7",
     "remarkable": "^2.0.1",
     "sheetclip": "^0.3.0",
-    "style-loader": "^1.3.0",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.2.3",
-    "webpack": "^5.26.3",
+    "webpack": "^5.27.0",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
     "webpack-preprocessor": "^0.1.12",
     "xlsx": "^0.16.9"
   },
@@ -118,8 +117,8 @@
   ],
   "peerDependencies": {
     "prop-types": "^15.7.2",
-    "react": ">=16.13.1",
-    "react-dom": ">=16.13.1"
+    "react": ">=17",
+    "react-dom": ">=17"
   },
   "engines": {
     "node": ">=12.0.0",
