--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "typescript": "^4.2.3",
     "webpack": "^5.27.0",
     "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-preprocessor": "^0.1.12",
     "xlsx": "^0.16.9"
   },
