--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,15 @@ jobs:
                 name: Inject Percy Environment variables
                 command: |
                   echo 'export PERCY_TOKEN="$PERCY_TOKEN_E2E"' >> $BASH_ENV
+            - restore_cache:
+                key: dep-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}-{{ checksum ".circleci/config.yml" }}
             - run:
                 name: Install npm packages
                 command: npm ci
+            - save_cache:
+                key: dep-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}-{{ checksum ".circleci/config.yml" }}
+                paths:
+                    - node_modules
             - run:
                 name: Install requirements
                 command: |
@@ -49,9 +55,15 @@ jobs:
             - image: circleci/python:3.9.2-buster-node-browsers
         steps:
             - checkout
+            - restore_cache:
+                key: dep-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}-{{ checksum ".circleci/config.yml" }}
             - run:
                 name: Install npm packages
                 command: npm ci
+            - save_cache:
+                key: dep-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}-{{ checksum ".circleci/config.yml" }}
+                paths:
+                    - node_modules
             - run:
                 name: Install requirements
                 command: |
@@ -71,9 +83,15 @@ jobs:
             - image: circleci/node:14-browsers
         steps:
             - checkout
+            - restore_cache:
+                key: dep-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}
             - run:
                 name: Install package.json
                 command: npm ci
+            - save_cache:
+                key: dep-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}
+                paths:
+                    - node_modules
             - run:
                 name: Run build:js
                 command: npm run private::build:js
@@ -91,9 +109,13 @@ jobs:
             - run:
                   name: Create virtual env
                   command: python -m venv || virtualenv venv
+            - restore_cache:
+                key: dep-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}
             - run:
                 name: Install package.json
                 command: npm ci
+            - save_cache:
+                key: dep-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}
             - run:
                 name: Install requirements
                 command: |
