remove virtualenv usage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,7 @@ jobs:
             - run:
                 name: Install requirements
                 command: |
-                    pip install --upgrade virtualenv
-                    python -m venv venv || virtualenv venv
+                    python -m venv venv
                     . venv/bin/activate
                     pip install -r dev-requirements.txt --quiet
                     git clone --depth 1 git@github.com:plotly/dash.git dash-main
@@ -67,8 +66,7 @@ jobs:
             - run:
                 name: Install requirements
                 command: |
-                    pip install --upgrade virtualenv
-                    python -m venv venv || virtualenv venv
+                    python -m venv venv
                     . venv/bin/activate
                     pip install -r dev-requirements.txt --quiet
                     pip install --progress-bar off -e git+https://github.com/plotly/dash.git@dev#egg=dash[dev,testing]
