--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
     "private::build:js-test-watch": "run-s \"private::build -- --mode development --config webpack.test.config.js --watch\"",
     "private::build:backends": "dash-generate-components src/dash-table/dash/DataTable.js dash_table -p package-info.json && cp dash_table_base/** dash_table/ && dash-generate-components src/dash-table/dash/DataTable.js dash_table -p package-info.json --r-prefix 'dash' --r-suggests 'dash' --jl-prefix 'dash'",
     "private::format.ts": "npm run private::lint.ts -- --fix",
-    "private::format.prettier": "prettier --config .prettierrc --write \"src/**/*.{js,ts,tsx}\"",
+    "private::format.prettier": "prettier --config .prettierrc --write \"{src,tests,demo}/**/*.{js,ts,tsx}\"",
     "private::format.black": "black dash_table_base tests",
-    "private::host_js": "http-server ./dash_table -c-1 --silent",
-    "private::lint.ts": "tslint --project tsconfig.json --config tslint.json",
+    "private::lint.ts": "eslint ./src ./tests",
     "private::lint.flake": "flake8 dash_table_base tests",
     "private::lint.black": "black --check dash_table_base tests",
-    "private::lint.prettier": "prettier --config .prettierrc \"src/**/*.{js,ts,tsx}\" --list-different",
+    "private::lint.prettier": "prettier --config .prettierrc \"{src,tests,demo}/**/*.{js,ts,tsx}\" --list-different",
     "private::test.python": "python -m unittest tests/unit/format_test.py",
     "private::test.unit": "karma start karma.conf.js --single-run",
     "build.watch": "webpack serve --disable-host-check --content-base dash_table --mode development --config webpack.dev.config.js",
@@ -69,16 +68,19 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/react-select": "^3.0.16",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "babel-loader": "^8.2.2",
     "chai": "^4.3.4",
     "css-loader": "^5.1.3",
     "css.escape": "^1.5.1",
     "d3-format": "^2.0.0",
     "es-check": "^5.2.3",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
     "fast-isnumeric": "^1.1.4",
     "file-loader": "^6.2.0",
     "highlight.js": "^10.6.0",
-    "http-server": "^0.12.3",
     "husky": "^5.1.3",
     "karma": "^6.2.0",
     "karma-chrome-launcher": "^3.1.0",
@@ -103,8 +105,6 @@
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.2.3",
     "webpack": "^5.27.0",
     "webpack-cli": "^4.5.0",
