--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,14 +10,15 @@
             "dash-table/*": [
                 "src/dash-table/*"
             ],
-            "tests": [
-                "src/tests"
+            "tests/*": [
+                "tests/*"
             ]
         }
     },
     "include": [
-        "src/*",
-        "demo/*",
-        "@Types"
+        "src/**/*",
+        "demo/**/*",
+        "tests/**/*",
+        "@Types/**/*"
     ]
 }
