add a tsconfig for linting

--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
         "@typescript-eslint"
     ],
     "parserOptions": {
-        "project": "./tsconfig.json"
+        "project": "./tsconfig.lint.json"
     },
     "rules": {
         "arrow-parens": [
