try parallelism again..

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ jobs:
             - image: circleci/python:3.9.2-buster-node-browsers
               environment:
                 PERCY_PARALLEL_TOTAL: -1
+        parallelism: 2
         steps:
             - checkout
             - run:
@@ -43,11 +44,14 @@ jobs:
                 name: Run tests
                 command: |
                     . venv/bin/activate
-                    npm run test.server
-            - run:
-                name: 🦔 percy finalize
-                command: npx percy finalize --all
-                when: always
+                    TESTFILES=$(circleci tests glob "tests/selenium/**/test_*.py" | circleci tests split --split-by=timings)
+                    pytest --nopercyfinalize --junitxml=test-reports/junit_intg.xml ${TESTFILES}
+            - store_artifacts:
+                path: test-reports
+            - store_test_results:
+                path: test-reports
+            - store_artifacts:
+                path: /tmp/dash_artifacts
 
     "unit-test":
         docker:
