percy-finalize step

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,15 @@
 version: 2.1
 
 jobs:
-    "server-test":
+    percy-finalize:
+        docker:
+            - image: percyio/agent
+        steps:
+            - run: |
+              echo 'export PERCY_TOKEN="$PERCY_TOKEN_E2E"' >> $BASH_ENV
+              percy finalize --all
+
+    server-test:
         docker:
             - image: circleci/python:3.9.2-buster-node-browsers
               environment:
@@ -53,7 +61,7 @@ jobs:
             - store_artifacts:
                 path: /tmp/dash_artifacts
 
-    "unit-test":
+    unit-test:
         docker:
             - image: circleci/python:3.9.2-buster-node-browsers
         steps:
@@ -80,7 +88,7 @@ jobs:
                     . venv/bin/activate
                     npm run test.unit
 
-    "visual-test":
+    visual-test:
         docker:
             - image: circleci/node:14-browsers
         steps:
@@ -103,7 +111,7 @@ jobs:
             - store_artifacts:
                 path: storybook-static
 
-    "node":
+    node:
         docker:
             - image: circleci/python:3.9.2-node
         steps:
@@ -137,7 +145,10 @@ workflows:
     version: 2
     build:
         jobs:
-            - "node"
-            - "server-test"
-            - "unit-test"
-            - "visual-test"
+            - node
+            - server-test
+            - unit-test
+            - visual-test
+            - percy-finalize:
+              requires:
+                - server-test
