--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,8 @@ jobs:
         docker:
             - image: percyio/agent
         steps:
-            - run: |
-              echo 'export PERCY_TOKEN="$PERCY_TOKEN_E2E"' >> $BASH_ENV
-              percy finalize --all
+            - run: echo 'export PERCY_TOKEN="$PERCY_TOKEN_E2E"' >> $BASH_ENV
+            - run: percy finalize --all
 
     server-test:
         docker:
