--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,7 +120,7 @@ jobs:
             - checkout
             - run:
                   name: Create virtual env
-                  command: python -m venv
+                  command: python -m venv venv
             - restore_cache:
                 key: dep-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "package.json" }}
             - run:
