--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@plotly/webpack-dash-dynamic-import": "^1.2.0",
     "@storybook/builder-webpack5": "^6.3.2",
     "@storybook/cli": "^6.3.2",
+    "@storybook/manager-webpack5": "^6.3.2",
     "@storybook/react": "^6.3.2",
     "@storybook/semver": "^7.3.2",
     "@types/chai": "^4.2.20",
